# cpp-2022

lab01/: CMakeLists.txt  functions.cpp  functions.h  main_01.cpp
lab02/: Point.cpp  Point.h  main_02.cpp  util.cpp  util.h
lab03/: List.cpp  List.h  Stack.cpp  Stack.h  main_03.cpp
lab04/: CMakeLists.txt  Point.cpp  Point.h  PointsSet.cpp  PointsSet.h  main_04.cpp
lab05/: Matrix.cpp  Matrix.h  main_05.cpp
lab06/: Polynomial.cpp  Polynomial.h  main_06.cpp
lab08/: main_08.cpp
lab09/: Alkalmazott.cpp  Alkalmazott.h  Ceg.cpp  Ceg.h  Manager.cpp  Manager.h  Szemely.cpp  Szemely.h  main_09.cpp
lab10/: OrderedList.h  main_10.cpp
lab12/: CMakeLists.txt  GraduationDao.h  GraduationDaoImpl.cpp  GraduationDaoImpl.h  GraduationService.h  GraduationServiceImpl.cpp  GraduationServiceImpl.h  Settlement.cpp  Settlement.h  SettlementStatisticImpl.cpp  SettlementStatisticImpl.h  SettlementStatistics.h  Student.cpp  Student.h  main_12.cpp
