project(lab12)
add_executable(lab12 main_12.cpp Student.cpp Student.h GraduationDao.h GraduationDaoImpl.cpp GraduationDaoImpl.h GraduationServiceImpl.cpp GraduationServiceImpl.h GraduationService.h Settlement.cpp Settlement.h SettlementStatistics.h SettlementStatisticImpl.cpp SettlementStatisticImpl.h)